// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Summary /> should style trend red/green 1`] = `
<span
  class="text-tsm flex items-center font-bold text-green"
>
  <image
    aria-label="Upwards trend"
    class="mr-1 h-4 w-4 fill-green"
    style="transform: none;"
  />
  50.00%
</span>
`;

exports[`<Summary /> should style trend red/green 3`] = `
<span
  class="text-tsm flex items-center font-bold text-red"
>
  <image
    aria-label="Downwards trend"
    class="mr-1 h-4 w-4 fill-red"
    style="transform: scaleY(-1);"
  />
  50.00%
</span>
`;

exports[`<Summary /> should style trend red/green 4`] = `
<image
  aria-label="Downwards trend"
  class="mr-1 h-4 w-4 fill-red"
  style="transform: scaleY(-1);"
/>
`;

exports[`<Summary /> should style trend red/green 5`] = `
<span
  class="text-tsm flex items-center font-bold text-green"
>
  <image
    aria-label="Upwards trend"
    class="mr-1 h-4 w-4 fill-green"
    style="transform: none;"
  />
  50.00%
</span>
`;

exports[`<Summary /> should style trend red/green 6`] = `
<image
  aria-label="Upwards trend"
  class="mr-1 h-4 w-4 fill-green"
  style="transform: none;"
/>
`;
